welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: not found: value b
	b=Math.abs(n-100)
        ^nearHundred:5: error: not found: value c
  c=Math.abs(n-200)
  ^nearHundred:7: error: not found: value b
  if(b<=10){a=true
     ^nearHundred:8: error: not found: value c
  }else if (c<=10){a=true}
            ^