welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
var a :Boolean=false

def nearHundred(n:Int): Boolean = {
	b=Math.abs(n-100)
  c=Math.abs(n-200)
  
  if(b<=10){a=true
  }else if (c<=10){a=true}


return a

}